--- a/Football_Scores-master/app/src/main/AndroidManifest.xml
+++ b/Football_Scores-master/app/src/main/AndroidManifest.xml
@@ -33,7 +33,23 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="barqsoft.footballscores.MainActivity" />
         </activity>
-        <service android:name=".service.myFetchService" />
+
+        <service android:name=".service.MyFetchService" />
+
+        <!-- Widget -->
+        <service android:name=".widget.WidgetService"
+        android:permission="android.permission.BIND_REMOTEVIEWS" />
+
+        <receiver
+            android:name=".widget.WidgetProvider"
+            android:label="Football Scores Widget" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="barqsoft.footballscores.UPDATE_WIDGET_BROADCAST" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/widget_provider" />
+        </receiver>
     </application>
 
 </manifest>
